# openkit

./: .env.example  .gitignore  .release-it.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  electron-builder.yml  global.d.ts  nx.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.apps.json  tsconfig.json  tsconfig.libs.json  tsconfig.workspace.json  vitest.workspace.ts
.claude/: settings.json
.claude/skills/: work-on-task
.github/: dependabot.yml
.github/workflows/: build.yml  claude-pr-review.yml  code-quality.yml  mobile-preview.yml  package-pull-request.yml  package-release.yml  package.yml  pull-request-package.yml  release.yml  review-pull-request.yml  smoke-tests.yml  test.yml
.openkit/: config.json
apps/cli/: README.md  package.json  project.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/desktop-app/: README.md  (+7 more)
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  ELECTRON.md  FRONTEND.md  HOOKS.md  INTEGRATIONS.md  MCP.md  NOTIFICATIONS.md  PORT-MAPPING.md  PROJECT-STRUCTURE.md  PROJECT_STRUCTURE.md  SETUP-FLOW.md  _ARCHITECTURE_ROADMAP_SKETCH.md
electron/: main.ts  notification-manager.ts  server-spawner.ts
libs/logger/python/: __init__.py  __init__.pyi  bindings.py  bindings.pyi  logger.py  logger.pyi  pyproject.toml
prd/: AGENTS.md  DX.md  FEATURES.md  SKILLS.md  TODO.md  UX.md
scripts/: bump-affected-app-versions.mjs  setup.sh  smoke-tarball.mjs  verify-package.mjs
src/: actions.ts  global.d.ts  mcp.ts  version.ts
website/: astro.config.mjs  package.json  pnpm-lock.yaml
(+697 files in other folders)
